Finalize all new payment screen tasks

--- a/app/src/main/res/layout/activity_payment_history.xml
+++ b/app/src/main/res/layout/activity_payment_history.xml
@@ -11,8 +11,9 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/paymentHistory"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
         tools:itemCount="5"
         tools:listitem="@layout/payment_history_item" />
 
