--- a/app/src/debug/res/layout/activity_development.xml
+++ b/app/src/debug/res/layout/activity_development.xml
@@ -19,6 +19,14 @@
             android:gravity="center_horizontal"
             android:text="Hedvig Development Screen" />
 
+        <CheckBox
+            android:id="@+id/useMockData"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="@dimen/base_margin_double"
+            android:text="Use Mock Data" />
+
         <Button
             android:id="@+id/openWhatsNew"
             style="@style/HedvigButton.Purple"
