--- a/app/src/main/res/layout/activity_my_home.xml
+++ b/app/src/main/res/layout/activity_my_home.xml
@@ -85,7 +85,7 @@
             </LinearLayout>
 
             <View
-                android:id="@id/separator"
+                android:id="@+id/separator"
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:layout_marginTop="24dp"
