--- a/app/src/main/res/layout/connect_bank_account_card.xml
+++ b/app/src/main/res/layout/connect_bank_account_card.xml
@@ -2,58 +2,61 @@
 <com.hedvig.app.ui.view.HedvigCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/connectBankAccountCard"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="@dimen/base_margin">
+    android:layout_marginStart="@dimen/base_margin_double"
+    android:layout_marginTop="@dimen/base_margin_double"
+    android:layout_marginEnd="@dimen/base_margin_double"
+    android:visibility="gone"
+    tools:visibility="visible">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
         <TextView
-            android:id="@id/cashbackOptionTitle"
+            android:id="@id/cardTitle"
+            style="@style/Headline.Small"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/base_margin_double"
             android:layout_marginTop="@dimen/base_margin_double"
-            android:theme="@style/Headline.Small"
+            android:text="@string/PROFILE_PAYMENT_CONNECT_DIRECT_DEBIT_TITLE"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:text="SOS Barnbyar" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@id/cashbackOptionParagraph"
-            android:layout_width="0dp"
+            android:id="@id/cardParagraph"
+            style="@style/Body.Small"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/base_margin_double"
             android:layout_marginTop="@dimen/base_margin"
             android:layout_marginEnd="@dimen/base_margin_double"
-            android:theme="@style/Body.Small"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/cashbackOptionTitle"
-            tools:text="För att bli en trygg vuxen krävs en trygg barndom. Därför arbetar SOS Barnbyar med långsiktiga insatser för att inte ett enda barn ska behöva växa upp ensamt." />
+            android:text="@string/PROFILE_PAYMENT_CONNECT_DIRECT_DEBIT_DESCRIPTION"
+            app:layout_constraintTop_toBottomOf="@id/cardTitle" />
 
         <View
-            android:id="@id/endSeparator"
+            android:id="@id/cardSeparator"
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_marginTop="@dimen/base_margin_triple"
-            android:background="@color/separator"
-            app:layout_constraintTop_toBottomOf="@id/cashbackOptionParagraph" />
+            android:background="@color/separator_elevation_1"
+            app:layout_constraintTop_toBottomOf="@id/cardParagraph" />
 
         <Button
-            android:id="@id/cashbackSelect"
+            android:id="@id/connectBankAccount"
             style="?android:attr/borderlessButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/base_margin_double"
-            android:gravity="center_vertical|end"
+            android:text="@string/PROFILE_PAYMENT_CONNECT_DIRECT_DEBIT_BUTTON"
             android:theme="@style/DialogButton"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/endSeparator"
-            tools:text="Välj SOS Barnbyar" />
+            app:layout_constraintTop_toBottomOf="@id/cardSeparator" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
