--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,6 +21,7 @@
     <color name="off_black">#414150</color>
     <color name="off_black_dark">#141033</color>
     <color name="dark_purple">#0F007A</color>
+    <color name="midnight_700">#0c0061</color>
     <color name="green">#1BE9B6</color>
     <color name="dark_green">#009175</color>
     <color name="pink">#FF8A80</color>
