--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -145,4 +145,5 @@
     <dimen name="tab_bar_icon_size">26dp</dimen>
     <dimen name="progress_tank_view_height">200dp</dimen>
     <dimen name="expandable_content_view_collapsed_height">200dp</dimen>
+    <dimen name="expandable_content_view_bottom_fade_out_height">100dp</dimen>
 </resources>
