--- a/app/src/main/res/layout/offer_section_terms.xml
+++ b/app/src/main/res/layout/offer_section_terms.xml
@@ -10,8 +10,8 @@
 
     <ImageView
         android:id="@+id/offer_legal_image"
-        android:layout_width="162dp"
-        android:layout_height="162dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:adjustViewBounds="true"
         android:contentDescription="@null"
         android:tint="@color/icon_tint"
